--- a/.github/workflows/auto-labeler.yaml
+++ b/.github/workflows/auto-labeler.yaml
@@ -15,6 +15,8 @@ permissions:
 jobs:
   auto_labeler:
     permissions:
+      # write permission is required to create a GitHub release
+      contents: write
       # write permission is required for autolabeler
       # otherwise, read permission is required at least
       pull-requests: write
