--- a/.github/workflows/auto-labeler.yaml
+++ b/.github/workflows/auto-labeler.yaml
@@ -18,6 +18,9 @@ jobs:
     outputs:
       policy_working_dirs: ${{ steps.policy-matrix.outputs.policy_working_dirs }}
     steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          fetch-depth: 0 # checkout all history to do git diff
       - name: 'Policy Matrix'
         id: policy-matrix
         uses: ./.github/actions/policy-matrix
