Set up release tag

--- a/.github/actions/calculate-policy-matrix/action.yaml
+++ b/.github/actions/calculate-policy-matrix/action.yaml
@@ -1,5 +1,11 @@
 name: 'Policy Matrix'
 description: 'Retrieves the changed policies'
+inputs:
+  changes_only:
+    description: 'Only get the changed policies'
+    required: false
+    default: 'false'
+    type: 'boolean'
 outputs:
   policy_working_dirs:
     description: 'The directories of the changed policies'
@@ -14,7 +20,8 @@ runs:
         git remote -v
 
         policies_working_dirs=($(find policies -maxdepth 2 -name Makefile -exec dirname '{}' \;))
-        if [ "${{github.event_name}}" == "pull_request" ]; then
+
+        if [ "${{ inputs.changes_only }}" == "true" ]; then
           # list only changes of files in `policies/`:
           git_files="$(git diff --no-color --find-renames --find-copies --name-only origin/${{ github.base_ref }} ${{ github.sha }} -- policies)"
 
@@ -22,7 +29,7 @@ runs:
           policies_working_dirs=($(echo "$git_files" | cut -d/ -f1,2 ))
         fi
 
-        declare -p policies_working_dirs # for debug
+        declare -p policies_working_dirs
         policy_working_dirs=$(jq --compact-output --null-input '$ARGS.positional | map(select(. != "policies/Cargo.lock" and . != "policies/Cargo.toml" and . != "policies/go.mod" and . != "policies/go.sum")) | unique' --args -- "${policies_working_dirs[@]}")
         echo "policy_working_dirs=$policy_working_dirs"
         echo "policy_working_dirs=$policy_working_dirs" >> $GITHUB_OUTPUT
