--- a/.github/workflows/auto-labeler.yaml
+++ b/.github/workflows/auto-labeler.yaml
@@ -23,7 +23,9 @@ jobs:
           fetch-depth: 0 # checkout all history to do git diff
       - name: 'Policy Matrix'
         id: policy-matrix
-        uses: ./.github/actions/policy-matrix
+        uses: ./.github/actions/calculate-policy-matrix
+        with:
+          changes_only: ${{ github.event_name == 'pull_request' && 'true' || 'false' }}
   auto_labeler:
     uses: ./.github/workflows/reusable-auto-labeler.yaml
     needs: calculate-policy-matrix
