--- a/.github/actions/calculate-policy-matrix/action.yaml
+++ b/.github/actions/calculate-policy-matrix/action.yaml
@@ -1,10 +1,5 @@
 name: 'Policy Matrix'
 description: 'Retrieves the changed policies'
-inputs:
-  changes_only:
-    description: 'Only get the changed policies'
-    required: false
-    default: 'false'
 outputs:
   policy_working_dirs:
     description: 'The directories of the changed policies'
@@ -20,7 +15,7 @@ runs:
 
         policies_working_dirs=($(find policies -maxdepth 2 -name Makefile -exec dirname '{}' \;))
 
-        if [ "${{ inputs.changes_only }}" == "true" ]; then
+        if [ "${{github.event_name}}" == "pull_request" ]; then
           # list only changes of files in `policies/`:
           git_files="$(git diff --no-color --find-renames --find-copies --name-only origin/${{ github.base_ref }} ${{ github.sha }} -- policies)"
 
