--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -203,5 +203,5 @@ jobs:
       - name: Publish to ArtifactHub
         uses: ./.github/actions/push-artifacthub
         with:
-          policy-working-dir: "${{ steps.calculate-policy.outputs.policy_working_dir }}"
+          policy-working-dir: "${{ needs.calculate-policy-from-tag.outputs.policy-working-dir }}"
           version: "${{ needs.calculate-policy-from-tag.outputs.policy-version }}"
