--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -201,6 +201,13 @@ jobs:
               make_latest: !isPreRelease
             });
 
+  push-to-artifacthub:
+    runs-on: ubuntu-latest
+    needs: [calculate-policy-from-tag, release]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
       - name: Publish to ArtifactHub
         uses: ./.github/actions/push-artifacthub
         with:
