--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -208,6 +208,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
+      - name: Install dependencies
+        uses: ./.github/actions/install-dependencies
+
       - name: Publish to ArtifactHub
         uses: ./.github/actions/push-artifacthub
         with:
