--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,6 +56,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [calculate-policy-from-tag, pre-release-checks, ci]
+    concurrency:
+      group: ${{ github.workflow }}
     permissions:
       # Required to create GH releases
       contents: write
