--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,8 +56,6 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [calculate-policy-from-tag, pre-release-checks, ci]
-    concurrency:
-      group: ${{ github.workflow }}
     permissions:
       # Required to create GH releases
       contents: write
@@ -204,6 +202,18 @@ jobs:
               prerelease: isPreRelease,
               make_latest: !isPreRelease
             });
+
+
+  push-to-artifacthub:
+    runs-on: ubuntu-latest
+    needs: [ calculate-policy-from-tag, release ]
+    concurrency:
+      group: ${{ github.workflow }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          fetch-depth: 0 # fetch all history for all branches and tags
 
       - name: Publish to ArtifactHub
         uses: ./.github/actions/push-artifacthub
