--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,8 +66,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0 # fetch all history for all branches and tags
 
       - name: Install dependencies
         uses: ./.github/actions/install-dependencies
@@ -203,7 +201,6 @@ jobs:
               make_latest: !isPreRelease
             });
 
-
   push-to-artifacthub:
     runs-on: ubuntu-latest
     needs: [ calculate-policy-from-tag, release ]
@@ -214,6 +211,9 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           fetch-depth: 0 # fetch all history for all branches and tags
+
+      - name: Install dependencies
+        uses: ./.github/actions/install-dependencies
 
       - name: Publish to ArtifactHub
         uses: ./.github/actions/push-artifacthub
